app/less/components/button/button.less
.button {
    position: relative;
}

.icon-canvas-block {
    width: 100%;
    height: 100%;

    // This was causing the shallow shadow of popup buttons to be cut off.
    // overflow: hidden;
}

/**
 * Button and animated background will have same width, so that animated
 * background container can animate to zero width.
 */
.button {
    &, & .icon-canvas {
        width: @app-icon-diameter;
        height: @app-icon-diameter;
    }
}

.icon-canvas {
    border-radius: 50%;
    background-color: @button-disabled-colour;
}

// Specific selector to override styling in dot-block.
.dom-manager {
    .enabled {
        cursor: pointer;

        &.button {

            .icon-canvas {
                transition: background-color @animation-default,
                            transform @animation-instant;
            }

            // Animate container itself, because its overflow is hidden.
            &:hover {
                .icon-canvas-block {
                    animation: bounceHover @animation-default;
                }
            }

            &:active {
                .icon-canvas-block {
                    transform: scale(0.9);
                }
            }
        }
    }
}

.custom-shape {
    // Only absolute positioning shows the access icon. I'm not sure why.
    position: absolute;
    top: 0;
    left: 0;

    .icon-canvas {
        border-radius: 0;
    }
}

.custom-size {
    &.button {
        &, & .icon-canvas {
            width: 100%;
            height: 100%;
        }
    }
}

.button.small {
    &, & .icon-canvas {
        width: @app-small-icon-diameter;
        height: @app-small-icon-diameter;
    }
}

.button.large, .popup-button-block, .lyric-button-block {
    &, & .icon-canvas {
        width: @app-large-icon-diameter;
        height: @app-large-icon-diameter;
    }
}

.tablet-width {
    .button.large, .popup-button-block, .lyric-button-block {
        &, & .icon-canvas {
            width: @app-tablet-large-icon-diameter;
            height: @app-tablet-large-icon-diameter;
        }
    }
}

.mini-width {
    .button.large, .popup-button-block, .lyric-button-block {
        &, & .icon-canvas {
            width: @app-mini-large-icon-diameter;
            height: @app-mini-large-icon-diameter;
        }
    }
}

.phone-width {
    .button.large, .popup-button-block, .lyric-button-block {
        &, & .icon-canvas {
            width: @app-icon-diameter;
            height: @app-icon-diameter;
        }
    }
}

